--- a/wallet/ios/support-test.htm
+++ b/wallet/ios/support-test.htm
@@ -47,7 +47,7 @@
         </p>
         <a href="link_to_your_app" target="_blank">Check out the app</a>
         <div class="qr-code">
-            <img src="./assets/appstore-qr-code.png">
+            <img src="./assets/appstore-qr-code.png" width="200" height="200">
         </div>
     </div>
 </body>
