--- a/wallet/ios/support-test.htm
+++ b/wallet/ios/support-test.htm
@@ -40,10 +40,10 @@
     <div class="container">
         <img src="path_to_your_image.jpg">
         <p>
-            If you have any questions or suggestions, feel free to <a href="mailto:your_email@example.com">write to me</a>. I'm always happy to help. I'm constantly working on improving my app and appreciate your feedback.
+            If you have any questions or suggestions, feel free to <a href="mailto:vitaliyvovchok@gmail.com">write to me</a>. I'm always happy to help. I'm constantly working on improving my app and <strong>appreciate your feedback</strong>.
         </p>
         <p>
-            Also, if you like my app, please share it with your friends. Your support means a lot!
+            Also, if you like my app, please <strong>share it with your friends</strong>. Your support means a lot!
         </p>
         <a href="link_to_your_app" target="_blank">Check out the app</a>
         <div class="qr-code">
