--- a/wallet/ios/support-test.htm
+++ b/wallet/ios/support-test.htm
@@ -40,7 +40,7 @@
     <div class="container">
         <img src="path_to_your_image.jpg">
         <p>
-            If you have any questions or suggestions, feel free to <a href="mailto:vitaliyvovchok@gmail.com">write to me</a>. I'm always happy to help. I'm constantly working on improving my app and <strong>appreciate your feedback</strong>.
+            If you have any questions or suggestions, feel free to write to me at <a href="mailto:vitaliyvovchok@gmail.com">vitaliyvovchok@gmail.com</a>. I'm always happy to help. I'm constantly working on improving my app and <strong>appreciate your feedback</strong>.
         </p>
         <p>
             Also, if you like my app, please <strong>share it with your friends</strong>. Your support means a lot!
