--- a/wallet/ios/support-test.htm
+++ b/wallet/ios/support-test.htm
@@ -45,7 +45,7 @@
         <p>
             Also, if you like my app, please <strong>share it with your friends</strong>. Your support means a lot!
         </p>
-        <a href="link_to_your_app" target="_blank">Check out the app</a>
+        <a href="https://apps.apple.com/us/app/wallet-expense-journal/id6547831903?itsct=apps_box_link&itscg=30200" target="_blank">Check out the app</a>
         <div class="qr-code">
             <img src="./assets/appstore-qr-code.png" width="200" height="200">
         </div>
