--- a/wallet/ios/support-test.htm
+++ b/wallet/ios/support-test.htm
@@ -49,6 +49,8 @@
         <div class="qr-code">
             <img src="./assets/appstore-qr-code.png" width="100" height="100">
         </div>
+
+        <a href="https://apps.apple.com/us/app/wallet-expense-journal/id6547831903?itsct=apps_box_badge&amp;itscg=30200" style="display: inline-block; overflow: hidden; border-radius: 13px; width: 250px; height: 83px;"><img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/white/en-us?size=250x83&amp;releaseDate=1721001600" alt="Download on the App Store" style="border-radius: 13px; width: 250px; height: 83px;"></a>
     </div>
 </body>
 </html>
