--- a/wallet/ios/support-test.htm
+++ b/wallet/ios/support-test.htm
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="./assets/support-title.png">
+        <img src="./assets/support-title.png" width="150">
         <p>
             If you have any questions or suggestions, feel free to write to me at <a href="mailto:vitaliyvovchok@gmail.com">vitaliyvovchok@gmail.com</a>. I'm always happy to help. I'm constantly working on improving my app and <strong>appreciate your feedback</strong>.
         </p>
