--- a/wallet/ios/support-test.htm
+++ b/wallet/ios/support-test.htm
@@ -45,15 +45,16 @@
         <p>
             Also, if you like my app, please <strong>share it with your friends</strong>. Your support means a lot!
         </p>
-        <a href="https://apps.apple.com/us/app/wallet-expense-journal/id6547831903?itsct=apps_box_link&itscg=30200" target="_blank">Check out the app</a>
+        
         <div class="qr-code">
             <img src="./assets/appstore-qr-code.png" width="100" height="100">
         </div>
 
-        <a href="https://apps.apple.com/us/app/wallet-expense-journal/id6547831903?itsct=apps_box_badge&amp;itscg=30200" 
-            style="display: inline-block; overflow: hidden; border-radius: 13px; width: 100px;">
-            <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/white/en-us?size=100x33&amp;releaseDate=1721001600" 
-                alt="Download on the App Store" style="border-radius: 13px; width: 100px;">
+        <br/>
+        
+        <a href="https://apps.apple.com/us/app/wallet-expense-journal/id6547831903?itsct=apps_box_badge&amp;itscg=30200" style="display: inline-block; overflow: hidden; border-radius: 8px; width: 100px; height: 33px;">
+            <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=100x33&amp;releaseDate=1721001600" 
+                alt="Download on the App Store" style="border-radius: 8px; width: 100px; height: 33px;">
         </a>
     </div>
 </body>
