--- a/wallet/ios/support-ja.htm
+++ b/wallet/ios/support-ja.htm
@@ -10,7 +10,7 @@
             background-color: #f9f9f9;
             margin: 0;
             padding: 20px;
-            text-align: center.
+            text-align: center;
         }
         .container {
             background-color: #fff;
@@ -18,21 +18,21 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
             max-width: 600px;
-            margin: auto.
+            margin: auto;
         }
         img {
             max-width: 100%;
-            height: auto.
+            height: auto;
         }
         a {
             color: #007BFF;
-            text-decoration: none.
+            text-decoration: none;
         }
         a:hover {
-            text-decoration: underline.
+            text-decoration: underline;
         }
         .qr-code {
-            margin-top: 20px.
+            margin-top: 20px;
         }
     </style>
 </head>
