--- a/wallet/ios/support-nl.htm
+++ b/wallet/ios/support-nl.htm
@@ -6,33 +6,33 @@
     <title>Contacteer ons</title>
     <style>
         body {
-            font-family: Arial, sans-serif.
-            background-color: #f9f9f9.
-            margin: 0.
-            padding: 20px.
-            text-align: center.
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 20px;
+            text-align: center;
         }
         .container {
-            background-color: #fff.
-            border-radius: 10px.
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1).
-            padding: 20px.
-            max-width: 600px.
-            margin: auto.
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            max-width: 600px;
+            margin: auto;
         }
         img {
-            max-width: 100%.
-            height: auto.
+            max-width: 100%;
+            height: auto;
         }
         a {
-            color: #007BFF.
-            text-decoration: none.
+            color: #007BFF;
+            text-decoration: none;
         }
         a:hover {
-            text-decoration: underline.
+            text-decoration: underline;
         }
         .qr-code {
-            margin-top: 20px.
+            margin-top: 20px;
         }
     </style>
 </head>
