--- a/wallet/ios/support-ja.htm
+++ b/wallet/ios/support-ja.htm
@@ -14,7 +14,7 @@
         }
         .container {
             background-color: #fff;
-            border-radius: 10px.
+            border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
             max-width: 600px;
