--- a/taboo/ios/support-en.htm
+++ b/taboo/ios/support-en.htm
@@ -38,17 +38,18 @@
 </head>
 <body>
     <div class="container">
-        <img src="./assets/support-title.png" width="150">
+        <!--<img src="./assets/support-title.png" width="150">-->
         <p>
             If you have any questions or suggestions, feel free to write to me at <a href="mailto:vitaliyvovchok@gmail.com">vitaliyvovchok@gmail.com</a>. I'm always happy to help. I'm constantly working on improving my app and <strong>appreciate your feedback</strong>.
         </p>
         <p>
             Also, if you like my app, please <strong>share it with your friends</strong>. Your support means a lot!
         </p>
-        
+        <!--
         <div class="qr-code">
             <img src="./assets/appstore-qr-code.png" width="100" height="100">
         </div>
+        -->
 
         <br/>
 
