--- a/wallet/android/privacy-en.htm
+++ b/wallet/android/privacy-en.htm
@@ -4,10 +4,10 @@
       <meta charset='utf-8'>
       <meta name='viewport' content='width=device-width'>
       <title>Privacy Policy</title>
-      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
-    <strong>Privacy Policy</strong> <p>
+        <h1>Privacy Policy</h1>
+    <strong>General</strong> <p>
                   Vitaliy Vovchok built the Wallet app as
                   an Ad Supported app. This SERVICE is provided by
                   Vitaliy Vovchok at no cost and is intended for use as
