--- a/wallet/ios/privacy-en.htm
+++ b/wallet/ios/privacy-en.htm
@@ -31,6 +31,16 @@
                 Information Collection and Use
             </strong>
         </p> 
+        <li>
+            <a 
+                href="https://firebase.google.com/support/privacy/" 
+                target="_blank" 
+                rel="noopener noreferrer">
+                Firebase Analytics
+            </a>
+        </li>
+
+        
         <p>
                 For a better experience, while using our App, I may require you to provide us with certain personally identifiable information. 
                 The information that I request will be retained on your device and is not collected by me in any way.
