--- a/wallet/ios/privacy-en.htm
+++ b/wallet/ios/privacy-en.htm
@@ -31,6 +31,13 @@
                 Information Collection and Use
             </strong>
         </p> 
+        <p>
+            For a better experience, while using our App, I may require you to provide us with certain personally identifiable information. 
+            The information that I request will be retained on your device and is not collected by me in any way.
+        </p> 
+        <p>
+            The app does use third-party services that may collect information used to identify you.
+        </p> 
         <li>
             <a 
                 href="https://firebase.google.com/support/privacy/" 
@@ -40,12 +47,6 @@
             </a>
         </li>
 
-        
-        <p>
-                For a better experience, while using our App, I may require you to provide us with certain personally identifiable information. 
-                The information that I request will be retained on your device and is not collected by me in any way.
-        </p> 
-        
         <p>
             <strong>
                 Security
